# cahnhilliard_2d

./: .gitmodules  .travis.yml  README.md
cpp/: CMakeLists.txt
cpp/src/: aligned_vector.h  allocator.h  cahnhilliard.cpp  cahnhilliard.h  cahnhilliard.i  cahnhilliard_thermal.cpp  cahnhilliard_thermal.h  cahnhilliard_thermal_nodiffusion.cpp  cahnhilliard_thermal_nodiffusion.h  chparams.cpp  chparams.h  driver.cpp  profile.h  right_hand_side.cpp  right_hand_side.h  run_ch_solver.cpp  run_ch_solver.h  stochastic_euler.hpp  timer.h  utils_ch.cpp  utils_ch.h
cpp/src/python/: __init__.py  __init__.py~  driver.py
cpp/src/python/aligned_vector/: py_aligned_vector.cpp  py_aligned_vector.cpp~
cpp/src/python/cahnhilliard/: py_cahnhilliard.cpp
cpp/swig/: driver.py
